fix: use java std for file